--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@ html {
   height: 100%;
   width: 100%;
 }
+h1 {
+  font-size: large; 
+  color: brown;
+}
 body {
   font-family: Arial, sans-serif;
 }
